--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.4",
         "psr/log": "~1.0",
         "gpupo/cache": "~1.2",
-        "gpupo/common": "~1.3"
+        "gpupo/common": "~1.3",
+        "psr/http-message": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
