--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "symfony/console": "^3.1",
-        "phpunit/phpunit": "*",
+        "symfony/console": "^3.1",    
         "psr/log": "^1.0",
         "gpupo/cache": "*",
         "gpupo/common": "^1.7.0",
@@ -27,6 +26,9 @@
         "monolog/monolog": "*",
         "sebastian/peek-and-poke": "1.0.x@dev",
         "codeclimate/php-test-reporter": "@dev"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "*"
     },
     "bin": ["bin/common-sdk"],
     "config": {
